update: add the font awesome and fix the z-index in the footer

--- a/miguapa-mundi/public/css/app.css
+++ b/miguapa-mundi/public/css/app.css
@@ -21,3 +21,7 @@ nav{
     transform: scale(2);
 }
 
+.in-front{
+    z-index: 1;
+    position: relative;
+}
